[ADD] idscocr: idscocr: Add product code in product view and search t49985 In the form the product.template was add the product_code then the customer can do a search of product by product_code also in Sale_order was add the posibility to add items by product_code Add the submodule sale-workflow and product-attribute

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,11 @@
 	path = edi-document
 	url = git@git.vauxoo.com:vauxoo/edi-document.git
 	branch = 14.0
+[submodule "sale-workflow"]
+	path = sale-workflow
+	url = git@github.com:OCA/sale-workflow.git
+	branch = 14.0
+[submodule "product-attribute"]
+	path = product-attribute
+	url = git@github.com:OCA/product-attribute.git
+	branch = 14.0
