--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "idscocr"]
 	path = idscocr
 	url = git@git.vauxoo.com:vauxoo/idscocr.git
-	branch = 14.0
+	branch = 14.0-pdf-changes-allanpa88
 [submodule "costarica"]
 	path = costarica
 	url = git@git.vauxoo.com:vauxoo/costarica.git
